fix(navigator): make space name visible in notion theme
When using the Obsidian Notion theme with Spaces, the Space Name is not shown properly. https://github.com/diegoeis/obsidianotion/issues/17

Adding a `flex-basis: 100%` property to the header will fix this.

--- a/src/css/Panels/Navigator/Navigator.css
+++ b/src/css/Panels/Navigator/Navigator.css
@@ -152,6 +152,7 @@ opacity: 1;
   display: flex;
   gap: 4px;
   flex-grow: 0 !important;
+  flex-basis: 100%;
 }
 .mk-sidebar:hover .mk-tree-new {
   opacity: .5
